Fix q42is overflow on mobile devices Style nprogress bar Remove readmore styling

--- a/styles/3_components.css
+++ b/styles/3_components.css
@@ -1,3 +1,9 @@
+#nprogress .bar {
+  height: 65px;
+  opacity: .7;
+  z-index: 2;
+}
+
 /* SHOWREEL */
 
 #showreel
@@ -145,22 +151,18 @@
 
 #q42is {
   height: 1em;
-  width: 100%;
   display: inline-block;
   overflow: hidden;
   position: absolute;
   margin-left: 10px;
   white-space: nowrap;
-}
-#q42is-container {
-  position: relative;
-  -webkit-perspective: 2000px;
+  max-width: calc(100% - 150px);
 }
 #q42is span {
   display: block;
   color: #DDD;
   -webkit-transition: -webkit-transform linear .2s;
-  -webkit-transform: rotateX(90deg);
+  -webkit-transform: rotateX(180deg);
 }
 #q42is span.selected {
   color: #888;
@@ -321,9 +323,6 @@ nav ul li a:hover {
   -o-transition: all .2s ease-out;
   transition: all .2s ease-out;
 }
-
-.block-readmore .readyToBounce { margin-right: 140px; opacity: 0; }
-.block-readmore a { -webkit-transition: all .3s ease-out; opacity: 1;  }
 
 /* Icon boxes */
 .block-with-icons ul {
